--- a/style.css
+++ b/style.css
@@ -63,10 +63,15 @@ section {
 .profile {
     display: flex;
     flex-direction: row;
+    align-items: center;
+}
+
+.profile-right {
+    padding-left: 20px;
 }
 
 img {
-    max-width: 30%;
+    max-width: 100%;
     height: auto;
     margin-top: 20px;
     border-radius: 50%;
